--- a/versal.html
+++ b/versal.html
@@ -2,57 +2,23 @@
 <html>
   <head>
     <title>Empty gadget</title>
-    <style>
-      input {
-        font-size: 20px;
-        padding: 5px;
-        min-width: 300px;
-      }
-      input[readonly] {
-        border: 1px solid transparent;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="bundle.css">
     <script src="bower_components/versal-component-runtime/dist/runtime.min.js"></script>
     <link rel="import" href="bower_components/versal-gadget-api/versal-gadget-api.html">
   </head>
   <body>
-    <input type="text" name="greeting" readonly value="What is your name?">
-    <input type="text" name="learnerName">
-    <script>
-      window.addEventListener('WebComponentsReady', function(){
+    <div class="main-app"></div>
 
-        var greeting = document.querySelector('[name=greeting]');
-        var learnerName = document.querySelector('[name=learnerName]');
-        var player = new VersalPlayerAPI();
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/backbone/backbone.js"></script>
 
-        greeting.addEventListener('change', function(e){
-          player.setAttribute(greeting.name, greeting.value);
-        });
+    <script src="bundle.js"></script>
 
-        learnerName.addEventListener('change', function(e){
-          player.setLearnerAttribute(learnerName.name, learnerName.value);
-        });
-
-        player.on('attributesChanged', function(data){
-          if(data.greeting) {
-            greeting.value = data.greeting;
-          };
-        });
-
-        player.on('learnerStateChanged', function(data){
-          if(data.learnerName) {
-            learnerName.value = data.learnerName;
-          };
-        });
-
-        player.on('editableChanged', function(editable){
-          greeting.readOnly = !editable.editable;
-          learnerName.readOnly = editable.editable;
-        });
-
-        player.setHeight(60);
-        player.startListening();
-      });
+    <!--inline templates-->
+    <script type="text/html" id="template-app">
+      <input type="text" name="greeting" readonly value="What is your name?">
+      <input type="text" name="learnerName">
     </script>
   </body>
 </html>
