--- a/versal.html
+++ b/versal.html
@@ -17,7 +17,7 @@
 
     <!--inline templates-->
     <script type="text/html" id="template-app">
-      <input type="text" name="greeting" readonly value="What is your name?">
+      <input type="text" name="greeting" value="What is your name?">
       <input type="text" name="learnerName">
     </script>
   </body>
